data/derived/comb/progs/unify/prog1711.ml.out
Characters 259-260:
  let (_, res) = List.fold_left f base args in res
                                ^
Error: This expression has type int * int -> int * int list -> int * int list
       but an expression was expected of type
         int * int -> int * int list -> int * int
       Type int list is not compatible with type int 
